2018-06-19  Youenn Fablet  <youenn@apple.com>

        RTCRtpSender.replaceTrack(null) ends current track
        https://bugs.webkit.org/show_bug.cgi?id=184911
        <rdar://problem/40758138>

        Reviewed by Eric Carlson.

        * web-platform-tests/webrtc/RTCRtpSender-replaceTrack-expected.txt:

2018-06-18  Youenn Fablet  <youenn@apple.com>

        Expose RTCPeerConnectionIceEventInit constructor
        https://bugs.webkit.org/show_bug.cgi?id=186770

        Reviewed by Alex Christensen.

        * web-platform-tests/webrtc/RTCPeerConnectionIceEvent-constructor-expected.txt:
        Updated expectation as per patch.
        * web-platform-tests/webrtc/rtcpeerconnection/rtcpeerconnection-idl-expected.txt:
        Rebasing this file, changes are unrelated but test is marked as flaky.

2018-06-16  Brendan McLoughlin  <brendan@bocoup.com>

        Sync additional web-platform-tests directories up to 197cdad
        https://bugs.webkit.org/show_bug.cgi?id=186356

        Reviewed by Youenn Fablet.

        * web-platform-tests/CODEOWNERS: Added.
        * web-platform-tests/CONTRIBUTING.md:
        * web-platform-tests/WebCryptoAPI/generateKey/successes_AES-CBC.https.any-expected.txt:
        * web-platform-tests/WebCryptoAPI/generateKey/successes_AES-CBC.https.any.worker-expected.txt:
        * web-platform-tests/WebCryptoAPI/generateKey/successes_AES-CTR.https.any-expected.txt:
        * web-platform-tests/WebCryptoAPI/generateKey/successes_AES-CTR.https.any.worker-expected.txt:
        * web-platform-tests/WebCryptoAPI/generateKey/successes_AES-GCM.https.any-expected.txt:
        * web-platform-tests/WebCryptoAPI/generateKey/successes_AES-GCM.https.any.worker-expected.txt:
        * web-platform-tests/WebCryptoAPI/generateKey/successes_AES-KW.https.any-expected.txt:
        * web-platform-tests/WebCryptoAPI/generateKey/successes_AES-KW.https.any.worker-expected.txt: