@@ -1,3 +1,15 @@
+2018-06-25  Youenn Fablet  <youenn@apple.com>
+
+        NetworkLoadChecker should not check CORS for 304 responses triggered by WebProcess revalidation
+        https://bugs.webkit.org/show_bug.cgi?id=186939
+        <rdar://problem/40941725>
+
+        Reviewed by Chris Dumez.
+
+        * web-platform-tests/cors/resources/cache-304.py: Added.
+        * web-platform-tests/cors/script-304-expected.txt: Added.
+        * web-platform-tests/cors/script-304.html: Added.
+
 2018-06-19  Youenn Fablet  <youenn@apple.com>
 
         RTCRtpSender.replaceTrack(null) ends current track
